fixing contrast for accessibility checker even though they don't display on the screen

--- a/wp-content/themes/uwsod-2020/less/uw.footer.less
+++ b/wp-content/themes/uwsod-2020/less/uw.footer.less
@@ -1,14 +1,15 @@
 .uw-footer {
 	background: url('assets/images/footer.jpg') center bottom;
-      .background-size(cover);
-      padding: 0 0 30px 0;
-      background-color:@purple;
+	.background-size(cover);
+	padding: 0 0 30px 0;
+	background-color: @purple;
 	// background: url('assets/images/footer.jpg') repeat-x center bottom;
 	// padding: 0 0 120px 0;
 	// background-color: #432577;
 	border-top: 7px solid #d1d1d1;
 	text-align: center;
 	position: relative;
+
 	.footer-wordmark {
 		display: inline-block;
 		width: 335px;
@@ -16,11 +17,14 @@
 		text-indent: -9999px;
 		overflow: hidden;
 		margin-top: 50px;
-    &:focus,
-    &:hover {
-      background: url(assets/svg/uw-sprite-focus.svg) no-repeat 0 -434px transparent;
-    }
+		color: #fff;
+
+		&:focus,
+		&:hover {
+			background: url(assets/svg/uw-sprite-focus.svg) no-repeat 0 -434px transparent;
+		}
 	}
+
 	.be-boundless {
 		line-height: 64px;
 		background: url(assets/images/campaign.svg) no-repeat center top transparent;
@@ -28,12 +32,15 @@
 		text-indent: -99999px;
 		margin: 10px 0 60px;
 		opacity: 1;
-    .transition(opacity .25s);
-    &:hover,
-    &:focus {
-      opacity: .6; 
-    }
+		color: #fff;
+		.transition(opacity .25s);
+
+		&:hover,
+		&:focus {
+			opacity: .8;
+		}
 	}
+
 	h4 {
 		font-family: "Encode Sans Compressed", sans-serif;
 		color: #fff;
@@ -41,6 +48,7 @@
 		font-size: 20px;
 		position: relative;
 		margin: 41px 0 11px 0;
+
 		&:before,
 		&:after {
 			content: "";
@@ -51,17 +59,21 @@
 			left: 50%;
 			margin-left: -40px;
 		}
+
 		&:before {
 			top: -27px;
 		}
+
 		&:after {
 			bottom: -85px;
 		}
 	}
+
 	ul.footer-social {
 		li {
 			list-style: none;
 			display: inline-block;
+
 			a {
 				color: #fff;
 				text-indent: -9999px;
@@ -69,26 +81,80 @@
 				display: inline-block;
 				background: url(assets/svg/uw-sprite.svg) no-repeat 0 -185px transparent;
 				padding: 8px 21px;
-				&.facebook	 { background-position: 0px -185px	}
-				&.twitter	 { background-position: -46px -185px	}
-				&.tumblr	 { background-position: -366px -185px	}
-				&.youtube	 { background-position: -138px -185px	}
-				&.linkedin	 { background-position: -184px -185px	}
-				&.pinterest	 { background-position: -92px -185px	}
-				&.vine		 { background-position: -230px -185px	}
-				&.google	 { background-position: -275px -185px	}
-				&.instagram	 { background-position: -322px -185px	}
+
+				&.facebook {
+					background-position: 0px -185px
+				}
+
+				&.twitter {
+					background-position: -46px -185px
+				}
+
+				&.tumblr {
+					background-position: -366px -185px
+				}
+
+				&.youtube {
+					background-position: -138px -185px
+				}
+
+				&.linkedin {
+					background-position: -184px -185px
+				}
+
+				&.pinterest {
+					background-position: -92px -185px
+				}
+
+				&.vine {
+					background-position: -230px -185px
+				}
+
+				&.google {
+					background-position: -275px -185px
+				}
+
+				&.instagram {
+					background-position: -322px -185px
+				}
+
 				&:hover,
 				&:focus {
-					&.facebook	 { background-position: 0px -225px	}
-					&.twitter	 { background-position: -46px -225px	}
-					&.tumblr	 { background-position: -366px -225px	}
-					&.youtube	 { background-position: -138px -225px	}
-					&.linkedin	 { background-position: -184px -225px	}
-					&.pinterest	 { background-position: -92px -225px	}
-					&.vine		 { background-position: -230px -225px	}
-					&.google	 { background-position: -275px -225px	}
-					&.instagram	 { background-position: -322px -225px	}
+					&.facebook {
+						background-position: 0px -225px
+					}
+
+					&.twitter {
+						background-position: -46px -225px
+					}
+
+					&.tumblr {
+						background-position: -366px -225px
+					}
+
+					&.youtube {
+						background-position: -138px -225px
+					}
+
+					&.linkedin {
+						background-position: -184px -225px
+					}
+
+					&.pinterest {
+						background-position: -92px -225px
+					}
+
+					&.vine {
+						background-position: -230px -225px
+					}
+
+					&.google {
+						background-position: -275px -225px
+					}
+
+					&.instagram {
+						background-position: -322px -225px
+					}
 				}
 			}
 		}
@@ -96,12 +162,15 @@
 
 	ul.footer-links {
 		margin: 45px 0 0 0;
+
 		li {
 			list-style: none;
 			display: inline-block;
+
 			&:last-child a:after {
-					display: none;
+				display: none;
 			}
+
 			a {
 				color: #fff;
 				position: relative;
@@ -114,13 +183,15 @@
 					right: -14px;
 					top: -2px;
 				}
-                &:focus, &:hover {
-                    color: @lightgold;
-                    text-decoration:none;
-                    &:after {
-                        color: #fff;
-                    }
-                }
+
+				&:focus, &:hover {
+					color: @lightgold;
+					text-decoration: none;
+
+					&:after {
+						color: #fff;
+					}
+				}
 			}
 		}
 	}
@@ -130,8 +201,6 @@
 		font-size: .8em;
 		margin-top: 15px;
 	}
-
-
 }
 
 //Mobile
