--- a/wp-content/themes/uwsod-2020/less/uw.thinstrip.less
+++ b/wp-content/themes/uwsod-2020/less/uw.thinstrip.less
@@ -8,15 +8,11 @@
 	position: relative;
 	z-index: 2;
 	.box-shadow(0 2px 5px rgba(0,0,0,.3));
-
 	// Container
-
 	.container {
 		position: relative;
 	}
-
 	// Patch
-
 	.uw-patch {
 		display: block;
 		text-indent: -9999px;
@@ -27,19 +23,20 @@
 		top: -22px;
 		left: 0;
 		z-index: 1;
-    &:focus,
-    &:hover{
-      background: url(assets/svg/uw-sprite-focus.svg) no-repeat 0 0 transparent;
-    }
-    &:before {
-      //to preload and cache hover svg
-      content: url(assets/svg/uw-sprite-focus.svg);
-      display: none;
-    }
+		color: #fff;
+
+		&:focus,
+		&:hover {
+			background: url(assets/svg/uw-sprite-focus.svg) no-repeat 0 0 transparent;
+		}
+
+		&:before {
+			//to preload and cache hover svg
+			content: url(assets/svg/uw-sprite-focus.svg);
+			display: none;
+		}
 	}
-
 	// Wordmark
-
 	.uw-wordmark {
 		display: block;
 		position: absolute;
@@ -49,19 +46,18 @@
 		width: 330px;
 		height: 24px;
 		background: url(assets/svg/uw-sprite.svg) no-repeat 0 -431px transparent;
+		color: #fff;
 	}
 
-  div.align-right {
-    float: right;
-  }
+	div.align-right {
+		float: right;
+	}
 
-  nav {
-    display: inline-block;
-    vertical-align: top;
-  }
-
+	nav {
+		display: inline-block;
+		vertical-align: top;
+	}
 	// Audience
-
 	ul.uw-thin-links {
 		margin: 0;
 		position: relative;
@@ -72,9 +68,11 @@
 		li {
 			float: left;
 			list-style: none;
+
 			&:last-child a:after {
 				display: none;
 			}
+
 			a, button {
 				font-family: @font-family-headline;
 				color: #fff;
@@ -84,109 +82,120 @@
 				float: right;
 				padding: 8px 25px 10px 0;
 				letter-spacing: .01em;
+
 				&:after {
 					position: absolute;
 					right: 6px;
-					height:32px;
+					height: 32px;
 					width: 12px;
 					top: 7px;
 					content: "";
 					background: url(assets/svg/uw-sprite.svg) no-repeat -696px 0;
 				}
+
 				&:hover,
 				&:focus {
 					color: @lightgold;
-                    text-decoration: underline;
+					text-decoration: underline;
 				}
 			}
-        }
-    }
-    button{
-        border: none;
-        display: inline-block;
-        vertical-align: top;
-        font-family: @font-family-headline;
-        font-size: 17px;
-        font-weight: @medium;
-        position: relative;
-        z-index: 1;
-        &.uw-search {
-            text-indent: -99999px;
-            padding-right: 78px;
-            border: 2px solid white;
-            background-color: transparent;
-            .border-radius(100%);
-            width: 45px;
-            padding: 0;
-            height: 45px;
-            margin: 0 15px;
-            overflow: hidden;
-            &:hover, &:focus {
-                border: 2px solid @lightgold;
-                background-color: darken(@purple, 5%);
-                .transition(all .1s linear)
-            }
-            &:after {
-                display: none;
-            }
-            svg {
-                position: absolute;
-                top: 12px;
-                left: 11px;
-            }
-        }
-        &.uw-quicklinks {
-            div {
-                position: absolute;
-                top: -22px;
-                right: 0px;
-                    width: 160px;
-                    height: 68px;
-                    margin: 0px;
-                }
-                height: 45px;
-                padding-left: 38px;
-                margin-left: -15px;
-                margin-right: 0;
-                padding-right: 54px;
-                color: #404040;
-                background: url(assets/svg/uw-sprite.svg) no-repeat -451px -235px;
-                overflow: hidden;
-                &:hover,
-                &:focus {                	
-                	color: #FFF;
-					text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.54);
-					text-decoration: underline;
-					outline: none;
-					.transition(all 0.2s ease);
-                    svg {
-                    	right: 15px;
-                    }
-                }
-                &:after {
-                    display: none;
-                }
-                //&:before {
-                //	position: absolute;
-                //	top: 1px;
-                //	right: -7px;
-                //	content: "";
-                //	width: 51px;
-                //	height: 45px;
-                //	display: block;
-                //	transform: skewX(-14deg);
-                //	background: linear-gradient(to right,#2e2e2e 0,#686868 4%,#686868 100%);
-                //}
-                svg {
-                    position: absolute;
-                    right: 11px;
-                    top: 16px;
-                    .transition(right 0.2s ease);
-                }
+		}
+	}
 
-            }
-        }
-    }		
+	button {
+		border: none;
+		display: inline-block;
+		vertical-align: top;
+		font-family: @font-family-headline;
+		font-size: 17px;
+		font-weight: @medium;
+		position: relative;
+		z-index: 1;
+
+		&.uw-search {
+			text-indent: -99999px;
+			padding-right: 78px;
+			border: 2px solid white;
+			background-color: transparent;
+			.border-radius(100%);
+			width: 45px;
+			padding: 0;
+			height: 45px;
+			margin: 0 15px;
+			overflow: hidden;
+
+			&:hover, &:focus {
+				border: 2px solid @lightgold;
+				background-color: darken(@purple, 5%);
+				.transition(all .1s linear)
+			}
+
+			&:after {
+				display: none;
+			}
+
+			svg {
+				position: absolute;
+				top: 12px;
+				left: 11px;
+			}
+		}
+
+		&.uw-quicklinks {
+			div {
+				position: absolute;
+				top: -22px;
+				right: 0px;
+				width: 160px;
+				height: 68px;
+				margin: 0px;
+			}
+
+			height: 45px;
+			padding-left: 38px;
+			margin-left: -15px;
+			margin-right: 0;
+			padding-right: 54px;
+			color: #404040;
+			background: url(assets/svg/uw-sprite.svg) no-repeat -451px -235px;
+			overflow: hidden;
+
+			&:hover,
+			&:focus {
+				color: #FFF;
+				text-shadow: 0px 0px 4px rgba(0, 0, 0, 0.54);
+				text-decoration: underline;
+				outline: none;
+				.transition(all 0.2s ease);
+
+				svg {
+					right: 15px;
+				}
+			}
+
+			&:after {
+				display: none;
+			}
+			//&:before {
+			//	position: absolute;
+			//	top: 1px;
+			//	right: -7px;
+			//	content: "";
+			//	width: 51px;
+			//	height: 45px;
+			//	display: block;
+			//	transform: skewX(-14deg);
+			//	background: linear-gradient(to right,#2e2e2e 0,#686868 4%,#686868 100%);
+			//}
+			svg {
+				position: absolute;
+				right: 11px;
+				top: 16px;
+				.transition(right 0.2s ease);
+			}
+		}
+	}
+}		
     // Active state of search button
 
     .search-open .uw-thinstrip button.uw-search {
